<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5">


    <TextView
        android:id="@+id/myText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#7B1FA2"
        android:padding="40dp"
        android:text="@string/str_head"
        android:textColor="#ffffff"
        android:textSize="26sp"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="32dp"
                android:text="@string/str_choose"
                android:textColor="#212121"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:textColor="#616161"
                android:text="@string/str_arugula"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:textColor="#616161"
                android:paddingTop="8dp"
                android:text="@string/str_bacon"/>

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:textColor="#616161"
                android:paddingTop="8dp"
                android:text="@string/str_beans"/>

            <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:textColor="#616161"
                    android:paddingTop="8dp"
                    android:text="@string/str_bread"/>

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:textColor="#616161"
                android:paddingTop="8dp"
                android:text="@string/str_butter"/>

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:textColor="#616161"
                android:paddingTop="8dp"
                android:text="@string/str_chickenBreasts"/>

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:textColor="#616161"
                android:text="@string/str_egg"/>

            <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:textColor="#616161"
                    android:text="@string/str_fetaCheese"/>

            <CheckBox
                    android:id="@+id/checkBox9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:textColor="#616161"
                    android:text="@string/str_garlic"/>

            <CheckBox
                    android:id="@+id/checkBox10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:textColor="#616161"
                    android:text="@string/str_lemon"/>

            <CheckBox
                    android:id="@+id/checkBox11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:textColor="#616161"
                    android:text="@string/str_onion"/>

            <CheckBox
                    android:id="@+id/checkBox12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:textColor="#616161"
                    android:text="@string/str_potato"/>

            <CheckBox
                    android:id="@+id/checkBox13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:textColor="#616161"
                    android:text="@string/str_swissChard"/>

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="16dp"
                android:background="#9c27b0"
                android:textColor="#FFFFFF"
                android:text="@string/str_done"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>





